objects/wkitsm__CaseTemplateField__c.object
<CustomObject>
    <fields>
        <fullName>wkitsm__CaseTemplateId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case Template</label>
        <referenceTo>wkitsm__CaseTemplate__c</referenceTo>
        <relationshipLabel>CaseTemplateFields</relationshipLabel>
        <relationshipName>CaseTemplateFields</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wkitsm__CopyFromOriginal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to determine if field should be copied from original case</description>
        <inlineHelpText>Checkbox to determine if field should be copied from original case</inlineHelpText>
        <label>Copy From Original</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__DefaultFieldValue__c</fullName>
        <label>Default Field Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>wkitsm__DefaultValue__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wkitsm__IsRequired__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is required or not</description>
        <inlineHelpText>This field is required or not</inlineHelpText>
        <label>Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__IsVisible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wkitsm__Order__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Order</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Case Template Field</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Template Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>